<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/darker_gray">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/myImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addProfile"
        android:src="@drawable/world_map"
        android:paddingTop="20dp"
        android:contentDescription="@string/world_map" />

    <Button
        android:id="@+id/noviceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myImage"
        android:layout_centerHorizontal="true"
        android:text="@string/play_novice"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/mediumBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/noviceBtn"
        android:text="@string/play_medium"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp" />

    <Button
        android:id="@+id/expertBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mediumBtn"
        android:text="@string/play_expert"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp" />

    <Button
        android:id="@+id/scoresBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/expertBtn"
        android:gravity="center"
        android:text="@string/scores"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp" />



</RelativeLayout>